fix: menumobile and overflow for services

--- a/assets/styles/servicios.css
+++ b/assets/styles/servicios.css
@@ -8,7 +8,6 @@ body {
   font-family: 'Oranienbaum', serif;
   min-width: 318px;
   font-size: 1.4rem;
-  overflow-x: hidden;
 }
 
 html {
